refactor task1 doc

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -12,7 +12,7 @@
     "### Understanding `load_iris()`\n",
     "- The `load_iris()` function returns a dictionary-like object called a **Bunch**.\n",
     "- The **Bunch** contains attributes that allow access to both the data and metadata of the dataset.\n",
-    "- The dataset consists of **numerical feature values** (sepal length, sepal width, petal length, petal width) and a **target variable** representing the species (`setosa`, `versicolor`, `virginica`).\n",
+    "- The dataset consists of **numerical feature values** (sepal length, sepal width, petal length, petal width) and a **target variable** representing the species (setosa, versicolor, virginica).\n",
     "- Full details are available in the [Scikit-learn documentation](https://scikit-learn.org/stable/modules/generated/sklearn.datasets.load_iris.html).\n"
    ]
   },
