refactoring task 1 and remove the display of the dataset as part of task 2

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -176,19 +176,17 @@
        "       [5.9, 3. , 5.1, 1.8]])"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Import necessary modules\n",
+    "# Import sklearn module\n",
     "import sklearn as skl\n",
     "\n",
     "# Load the iris dataset\n",
-    "iris_dataset = skl.datasets.load_iris()\n",
-    "# Have a look at the data set.\n",
-    "iris_dataset.data"
+    "iris_dataset = skl.datasets.load_iris()"
    ]
   },
   {
