--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -4,6 +4,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Required Imports for This Notebook\n",
+    "- **Pandas**: Used for data handling, exploration, and manipulation.\n",
+    "- **Scikit-learn**: Provides tools for loading datasets and applying machine learning techniques."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import sklearn as skl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Task 1: Source the Data Set\n",
     "\n",
     "## Importing the Iris Dataset\n",
@@ -12,179 +31,16 @@
     "### Understanding `load_iris()`\n",
     "- The `load_iris()` function returns a dictionary-like object called a **Bunch**.\n",
     "- The **Bunch** contains attributes that allow access to both the data and metadata of the dataset.\n",
-    "- The dataset consists of **numerical feature values** (sepal length, sepal width, petal length, petal width) and a **target variable** representing the species (setosa, versicolor, virginica).\n",
+    "- The dataset consists of **numerical features** (sepal length, sepal width, petal length, petal width) and  **target classes** representing the species (setosa, versicolor, virginica).\n",
     "- Full details are available in the [Scikit-learn documentation](https://scikit-learn.org/stable/modules/generated/sklearn.datasets.load_iris.html).\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[5.1, 3.5, 1.4, 0.2],\n",
-       "       [4.9, 3. , 1.4, 0.2],\n",
-       "       [4.7, 3.2, 1.3, 0.2],\n",
-       "       [4.6, 3.1, 1.5, 0.2],\n",
-       "       [5. , 3.6, 1.4, 0.2],\n",
-       "       [5.4, 3.9, 1.7, 0.4],\n",
-       "       [4.6, 3.4, 1.4, 0.3],\n",
-       "       [5. , 3.4, 1.5, 0.2],\n",
-       "       [4.4, 2.9, 1.4, 0.2],\n",
-       "       [4.9, 3.1, 1.5, 0.1],\n",
-       "       [5.4, 3.7, 1.5, 0.2],\n",
-       "       [4.8, 3.4, 1.6, 0.2],\n",
-       "       [4.8, 3. , 1.4, 0.1],\n",
-       "       [4.3, 3. , 1.1, 0.1],\n",
-       "       [5.8, 4. , 1.2, 0.2],\n",
-       "       [5.7, 4.4, 1.5, 0.4],\n",
-       "       [5.4, 3.9, 1.3, 0.4],\n",
-       "       [5.1, 3.5, 1.4, 0.3],\n",
-       "       [5.7, 3.8, 1.7, 0.3],\n",
-       "       [5.1, 3.8, 1.5, 0.3],\n",
-       "       [5.4, 3.4, 1.7, 0.2],\n",
-       "       [5.1, 3.7, 1.5, 0.4],\n",
-       "       [4.6, 3.6, 1. , 0.2],\n",
-       "       [5.1, 3.3, 1.7, 0.5],\n",
-       "       [4.8, 3.4, 1.9, 0.2],\n",
-       "       [5. , 3. , 1.6, 0.2],\n",
-       "       [5. , 3.4, 1.6, 0.4],\n",
-       "       [5.2, 3.5, 1.5, 0.2],\n",
-       "       [5.2, 3.4, 1.4, 0.2],\n",
-       "       [4.7, 3.2, 1.6, 0.2],\n",
-       "       [4.8, 3.1, 1.6, 0.2],\n",
-       "       [5.4, 3.4, 1.5, 0.4],\n",
-       "       [5.2, 4.1, 1.5, 0.1],\n",
-       "       [5.5, 4.2, 1.4, 0.2],\n",
-       "       [4.9, 3.1, 1.5, 0.2],\n",
-       "       [5. , 3.2, 1.2, 0.2],\n",
-       "       [5.5, 3.5, 1.3, 0.2],\n",
-       "       [4.9, 3.6, 1.4, 0.1],\n",
-       "       [4.4, 3. , 1.3, 0.2],\n",
-       "       [5.1, 3.4, 1.5, 0.2],\n",
-       "       [5. , 3.5, 1.3, 0.3],\n",
-       "       [4.5, 2.3, 1.3, 0.3],\n",
-       "       [4.4, 3.2, 1.3, 0.2],\n",
-       "       [5. , 3.5, 1.6, 0.6],\n",
-       "       [5.1, 3.8, 1.9, 0.4],\n",
-       "       [4.8, 3. , 1.4, 0.3],\n",
-       "       [5.1, 3.8, 1.6, 0.2],\n",
-       "       [4.6, 3.2, 1.4, 0.2],\n",
-       "       [5.3, 3.7, 1.5, 0.2],\n",
-       "       [5. , 3.3, 1.4, 0.2],\n",
-       "       [7. , 3.2, 4.7, 1.4],\n",
-       "       [6.4, 3.2, 4.5, 1.5],\n",
-       "       [6.9, 3.1, 4.9, 1.5],\n",
-       "       [5.5, 2.3, 4. , 1.3],\n",
-       "       [6.5, 2.8, 4.6, 1.5],\n",
-       "       [5.7, 2.8, 4.5, 1.3],\n",
-       "       [6.3, 3.3, 4.7, 1.6],\n",
-       "       [4.9, 2.4, 3.3, 1. ],\n",
-       "       [6.6, 2.9, 4.6, 1.3],\n",
-       "       [5.2, 2.7, 3.9, 1.4],\n",
-       "       [5. , 2. , 3.5, 1. ],\n",
-       "       [5.9, 3. , 4.2, 1.5],\n",
-       "       [6. , 2.2, 4. , 1. ],\n",
-       "       [6.1, 2.9, 4.7, 1.4],\n",
-       "       [5.6, 2.9, 3.6, 1.3],\n",
-       "       [6.7, 3.1, 4.4, 1.4],\n",
-       "       [5.6, 3. , 4.5, 1.5],\n",
-       "       [5.8, 2.7, 4.1, 1. ],\n",
-       "       [6.2, 2.2, 4.5, 1.5],\n",
-       "       [5.6, 2.5, 3.9, 1.1],\n",
-       "       [5.9, 3.2, 4.8, 1.8],\n",
-       "       [6.1, 2.8, 4. , 1.3],\n",
-       "       [6.3, 2.5, 4.9, 1.5],\n",
-       "       [6.1, 2.8, 4.7, 1.2],\n",
-       "       [6.4, 2.9, 4.3, 1.3],\n",
-       "       [6.6, 3. , 4.4, 1.4],\n",
-       "       [6.8, 2.8, 4.8, 1.4],\n",
-       "       [6.7, 3. , 5. , 1.7],\n",
-       "       [6. , 2.9, 4.5, 1.5],\n",
-       "       [5.7, 2.6, 3.5, 1. ],\n",
-       "       [5.5, 2.4, 3.8, 1.1],\n",
-       "       [5.5, 2.4, 3.7, 1. ],\n",
-       "       [5.8, 2.7, 3.9, 1.2],\n",
-       "       [6. , 2.7, 5.1, 1.6],\n",
-       "       [5.4, 3. , 4.5, 1.5],\n",
-       "       [6. , 3.4, 4.5, 1.6],\n",
-       "       [6.7, 3.1, 4.7, 1.5],\n",
-       "       [6.3, 2.3, 4.4, 1.3],\n",
-       "       [5.6, 3. , 4.1, 1.3],\n",
-       "       [5.5, 2.5, 4. , 1.3],\n",
-       "       [5.5, 2.6, 4.4, 1.2],\n",
-       "       [6.1, 3. , 4.6, 1.4],\n",
-       "       [5.8, 2.6, 4. , 1.2],\n",
-       "       [5. , 2.3, 3.3, 1. ],\n",
-       "       [5.6, 2.7, 4.2, 1.3],\n",
-       "       [5.7, 3. , 4.2, 1.2],\n",
-       "       [5.7, 2.9, 4.2, 1.3],\n",
-       "       [6.2, 2.9, 4.3, 1.3],\n",
-       "       [5.1, 2.5, 3. , 1.1],\n",
-       "       [5.7, 2.8, 4.1, 1.3],\n",
-       "       [6.3, 3.3, 6. , 2.5],\n",
-       "       [5.8, 2.7, 5.1, 1.9],\n",
-       "       [7.1, 3. , 5.9, 2.1],\n",
-       "       [6.3, 2.9, 5.6, 1.8],\n",
-       "       [6.5, 3. , 5.8, 2.2],\n",
-       "       [7.6, 3. , 6.6, 2.1],\n",
-       "       [4.9, 2.5, 4.5, 1.7],\n",
-       "       [7.3, 2.9, 6.3, 1.8],\n",
-       "       [6.7, 2.5, 5.8, 1.8],\n",
-       "       [7.2, 3.6, 6.1, 2.5],\n",
-       "       [6.5, 3.2, 5.1, 2. ],\n",
-       "       [6.4, 2.7, 5.3, 1.9],\n",
-       "       [6.8, 3. , 5.5, 2.1],\n",
-       "       [5.7, 2.5, 5. , 2. ],\n",
-       "       [5.8, 2.8, 5.1, 2.4],\n",
-       "       [6.4, 3.2, 5.3, 2.3],\n",
-       "       [6.5, 3. , 5.5, 1.8],\n",
-       "       [7.7, 3.8, 6.7, 2.2],\n",
-       "       [7.7, 2.6, 6.9, 2.3],\n",
-       "       [6. , 2.2, 5. , 1.5],\n",
-       "       [6.9, 3.2, 5.7, 2.3],\n",
-       "       [5.6, 2.8, 4.9, 2. ],\n",
-       "       [7.7, 2.8, 6.7, 2. ],\n",
-       "       [6.3, 2.7, 4.9, 1.8],\n",
-       "       [6.7, 3.3, 5.7, 2.1],\n",
-       "       [7.2, 3.2, 6. , 1.8],\n",
-       "       [6.2, 2.8, 4.8, 1.8],\n",
-       "       [6.1, 3. , 4.9, 1.8],\n",
-       "       [6.4, 2.8, 5.6, 2.1],\n",
-       "       [7.2, 3. , 5.8, 1.6],\n",
-       "       [7.4, 2.8, 6.1, 1.9],\n",
-       "       [7.9, 3.8, 6.4, 2. ],\n",
-       "       [6.4, 2.8, 5.6, 2.2],\n",
-       "       [6.3, 2.8, 5.1, 1.5],\n",
-       "       [6.1, 2.6, 5.6, 1.4],\n",
-       "       [7.7, 3. , 6.1, 2.3],\n",
-       "       [6.3, 3.4, 5.6, 2.4],\n",
-       "       [6.4, 3.1, 5.5, 1.8],\n",
-       "       [6. , 3. , 4.8, 1.8],\n",
-       "       [6.9, 3.1, 5.4, 2.1],\n",
-       "       [6.7, 3.1, 5.6, 2.4],\n",
-       "       [6.9, 3.1, 5.1, 2.3],\n",
-       "       [5.8, 2.7, 5.1, 1.9],\n",
-       "       [6.8, 3.2, 5.9, 2.3],\n",
-       "       [6.7, 3.3, 5.7, 2.5],\n",
-       "       [6.7, 3. , 5.2, 2.3],\n",
-       "       [6.3, 2.5, 5. , 1.9],\n",
-       "       [6.5, 3. , 5.2, 2. ],\n",
-       "       [6.2, 3.4, 5.4, 2.3],\n",
-       "       [5.9, 3. , 5.1, 1.8]])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Import sklearn module\n",
-    "import sklearn as skl\n",
-    "\n",
     "# Load the iris dataset\n",
     "iris_dataset = skl.datasets.load_iris()"
    ]
@@ -193,7 +49,253 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 2: The Title Goes here"
+    "# Task 2: Explore the Data Structure\n",
+    "\n",
+    "In this task, we examined the structure of the Iris dataset by performing the following steps:\n",
+    "\n",
+    "- **Printed the shape of the dataset** to determine the number of samples (rows) and features (columns).\n",
+    "- **Displayed the first 5 rows** to get an initial view of the data.\n",
+    "- **Displayed the last 5 rows** to check the end of the dataset.\n",
+    "- **Listed the feature names** to understand the measured attributes (sepal and petal dimensions).\n",
+    "- **Listed the target class names** to identify the species classifications."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of the dataset: (150, 5)\n",
+      "First 5 rows of the dataset:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal length (cm)</th>\n",
+       "      <th>sepal width (cm)</th>\n",
+       "      <th>petal length (cm)</th>\n",
+       "      <th>petal width (cm)</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
+       "0                5.1               3.5                1.4               0.2   \n",
+       "1                4.9               3.0                1.4               0.2   \n",
+       "2                4.7               3.2                1.3               0.2   \n",
+       "3                4.6               3.1                1.5               0.2   \n",
+       "4                5.0               3.6                1.4               0.2   \n",
+       "\n",
+       "   target  \n",
+       "0       0  \n",
+       "1       0  \n",
+       "2       0  \n",
+       "3       0  \n",
+       "4       0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last 5 rows of the dataset:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal length (cm)</th>\n",
+       "      <th>sepal width (cm)</th>\n",
+       "      <th>petal length (cm)</th>\n",
+       "      <th>petal width (cm)</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>6.7</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>6.3</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>6.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>6.2</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>5.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
+       "145                6.7               3.0                5.2               2.3   \n",
+       "146                6.3               2.5                5.0               1.9   \n",
+       "147                6.5               3.0                5.2               2.0   \n",
+       "148                6.2               3.4                5.4               2.3   \n",
+       "149                5.9               3.0                5.1               1.8   \n",
+       "\n",
+       "     target  \n",
+       "145       2  \n",
+       "146       2  \n",
+       "147       2  \n",
+       "148       2  \n",
+       "149       2  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature Names: ['sepal length (cm)', 'sepal width (cm)', 'petal length (cm)', 'petal width (cm)']\n",
+      "Target Classes: ['setosa' 'versicolor' 'virginica']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert the dataset into a Pandas DataFrame\n",
+    "iris_dataframe = pd.DataFrame(iris_dataset.data, columns=iris_dataset.feature_names)\n",
+    "\n",
+    "# Add the target column to the DataFrame\n",
+    "iris_dataframe[\"target\"] = iris_dataset.target\n",
+    "\n",
+    "# 1. Print the shape of the dataset\n",
+    "print(\"Shape of the dataset:\", iris_dataframe.shape)\n",
+    "\n",
+    "# 2. Print the first 5 rows of the dataset\n",
+    "print(\"First 5 rows of the dataset:\")\n",
+    "display(iris_dataframe.head())  # Use display() in Jupyter for better formatting\n",
+    "\n",
+    "# 3. Print the last 5 rows of the dataset\n",
+    "print(\"Last 5 rows of the dataset:\")\n",
+    "display(iris_dataframe.tail())\n",
+    "\n",
+    "# 4. Print the feature names (column names)\n",
+    "print(\"Feature Names:\", iris_dataset.feature_names)\n",
+    "\n",
+    "# 5. Print the target class names (species)\n",
+    "print(\"Target Classes:\", iris_dataset.target_names)"
    ]
   },
   {
