improve docs for task 1 and 2

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,12 +32,14 @@
     "- The `load_iris()` function returns a dictionary-like object called a **Bunch**.\n",
     "- The **Bunch** contains attributes that allow access to both the data and metadata of the dataset.\n",
     "- The dataset consists of **numerical features** (sepal length, sepal width, petal length, petal width) and  **target classes** representing the species (setosa, versicolor, virginica).\n",
-    "- Full details are available in the [Scikit-learn documentation](https://scikit-learn.org/stable/modules/generated/sklearn.datasets.load_iris.html).\n"
+    "\n",
+    "## Resources\n",
+    "- [Scikit-learn datasets documentation](https://scikit-learn.org/stable/modules/generated/sklearn.datasets.load_iris.html).\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,12 +59,15 @@
     "- **Displayed the first 5 rows** to get an initial view of the data.\n",
     "- **Displayed the last 5 rows** to check the end of the dataset.\n",
     "- **Listed the feature names** to understand the measured attributes (sepal and petal dimensions).\n",
-    "- **Listed the target class names** to identify the species classifications."
+    "- **Listed the target class names** to identify the species classifications.\n",
+    "\n",
+    "## Resources\n",
+    "- [Pandas dataframe documentation](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
