Task 4: Visualize Features

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "# Required Imports for This Notebook\n",
     "- **Pandas**: Used for data handling, exploration, and manipulation.\n",
-    "- **Scikit-learn**: Provides tools for loading datasets and applying machine learning techniques."
+    "- **Scikit-learn**: Provides tools for loading datasets and applying machine learning techniques.\n",
+    "- **Matplotlib**: Used for visualizing data with plots and charts."
    ]
   },
   {
@@ -16,7 +17,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import sklearn as skl"
+    "import sklearn as skl\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -135,7 +137,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Task 4: The Title Goes here"
+    "# Task 4: Visualize Features\n",
+    "\n",
+    "This code plots histograms for the four features of `iris_dataframe` in a 2×2 grid, setting the figure size to 12×8 inches.  \n",
+    "Each histogram has 20 bins, black edges, and 70% opacity, with the feature name as the title, the feature name as the x-axis label, and \"Frequency\" as the y-axis label.  \n",
+    "The layout is adjusted to prevent overlapping."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set figure size\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "\n",
+    "# Iterate through each column in the DataFrame\n",
+    "for i, column in enumerate(iris_dataframe.columns[:4], 1):\n",
+    "    # Create subplots (adjust grid size as needed)\n",
+    "    plt.subplot(2, 2, i)\n",
+    "    # Histogram with 20 bins, black edges, and 70% opacity.\n",
+    "    plt.hist(iris_dataframe[column], bins=20, edgecolor=\"black\", alpha=0.7)\n",
+    "    # Title\n",
+    "    plt.title(f\"Histogram of {column}\")\n",
+    "    # X-axis label\n",
+    "    plt.xlabel(column)\n",
+    "    # Y-axis label\n",
+    "    plt.ylabel(\"Frequency\")\n",
+    "\n",
+    "# Adjust layout to prevent overlapping\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   }
  ],
