adding short analysis description for Task 5

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -496,8 +496,9 @@
    "cell_type": "markdown",
    "source": [
     "# Task 5: Investigate Relationships\n",
-    "This code creates a scatter plot of sepal length vs. sepal width, color-coding points by species.\n",
-    "It iterates through the three species, filtering the dataset, and plots each species separately with a unique color."
+    "This code creates a scatter plot of sepal length vs. sepal width, color-coding points by species.  \n",
+    "It iterates through the three species, filtering the dataset, and plots each species separately with a unique color.  \n",
+    "The plot shows the relationship between Sepal Length and Sepal Width for three Iris species (setosa, versicolor, virginica), highlighting distinct clustering patterns with some overlap between versicolor and virginica."
    ]
   },
   {
@@ -610,8 +611,8 @@
    "cell_type": "markdown",
    "source": [
     "## Task 7: Analyze Class Distributions\n",
-    "Box-plots of the petal lengths for each of the three classes.\n",
-    "Grouping the DataFrame by target and extract petal length values.\n",
+    "Box-plots of the petal lengths for each of the three classes.  \n",
+    "Grouping the DataFrame by target and extract petal length values.  \n",
     "The analysis suggests significant differences in petal length between species, with virginica having the longest petals, followed by versicolor, and setosa having the shortest.\n",
     "## Resources\n",
     "https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.groupby.html\n",
