adding short analysis description for Task 6

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -552,7 +552,9 @@
    "cell_type": "markdown",
    "source": [
     "## Task 6: Analyze Relationship\n",
-    "Using `numpy.polyfit` to add a regression line to the scatter plot from Task 5.\n",
+    "Using `numpy.polyfit` to add a regression line to the scatter plot from Task 5.  \n",
+    "The plot shows a linear regression line (y = -0.06x + 3.42) fitted to the relationship between Sepal Length and Sepal Width for three Iris species.  \n",
+    "However the regression line is not meaningful for the dataset as the data points are not linearly correlated.\n",
     "## Resources\n",
     "[numpy.polyfit documentation](https://numpy.org/doc/stable/reference/generated/numpy.polyfit.html)"
    ]
