Task 6: improving analysis by adding R_2 value

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -14,8 +14,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-05T22:49:28.917726Z",
-     "start_time": "2025-04-05T22:49:24.777554Z"
+     "end_time": "2025-04-05T23:20:52.552910Z",
+     "start_time": "2025-04-05T23:20:52.550691Z"
     }
    },
    "cell_type": "code",
@@ -26,7 +26,7 @@
     "import numpy as np"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -49,8 +49,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-05T22:49:28.923198Z",
-     "start_time": "2025-04-05T22:49:28.920476Z"
+     "end_time": "2025-04-05T23:20:52.559374Z",
+     "start_time": "2025-04-05T23:20:52.556339Z"
     }
    },
    "cell_type": "code",
@@ -59,7 +59,7 @@
     "iris_dataset = datasets.load_iris()"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 16
   },
   {
    "metadata": {},
@@ -82,8 +82,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-05T22:49:28.960137Z",
-     "start_time": "2025-04-05T22:49:28.952736Z"
+     "end_time": "2025-04-05T23:20:52.577976Z",
+     "start_time": "2025-04-05T23:20:52.569316Z"
     }
    },
    "cell_type": "code",
@@ -320,7 +320,7 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 17
   },
   {
    "metadata": {},
@@ -337,8 +337,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-05T22:49:29.005002Z",
-     "start_time": "2025-04-05T22:49:28.968236Z"
+     "end_time": "2025-04-05T23:20:52.595057Z",
+     "start_time": "2025-04-05T23:20:52.588539Z"
     }
    },
    "cell_type": "code",
@@ -364,68 +364,68 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x137818dd0>"
+       "<pandas.io.formats.style.Styler at 0x1439872f0>"
       ],
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_6ec93 th {\n",
+       "#T_29069 th {\n",
        "  text-align: left;\n",
        "}\n",
-       "#T_6ec93 td {\n",
+       "#T_29069 td {\n",
        "  text-align: left;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_6ec93\">\n",
+       "<table id=\"T_29069\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_6ec93_level0_col0\" class=\"col_heading level0 col0\" >Mean</th>\n",
-       "      <th id=\"T_6ec93_level0_col1\" class=\"col_heading level0 col1\" >Minimum</th>\n",
-       "      <th id=\"T_6ec93_level0_col2\" class=\"col_heading level0 col2\" >Maximum</th>\n",
-       "      <th id=\"T_6ec93_level0_col3\" class=\"col_heading level0 col3\" >Standard Deviation</th>\n",
-       "      <th id=\"T_6ec93_level0_col4\" class=\"col_heading level0 col4\" >Median</th>\n",
+       "      <th id=\"T_29069_level0_col0\" class=\"col_heading level0 col0\" >Mean</th>\n",
+       "      <th id=\"T_29069_level0_col1\" class=\"col_heading level0 col1\" >Minimum</th>\n",
+       "      <th id=\"T_29069_level0_col2\" class=\"col_heading level0 col2\" >Maximum</th>\n",
+       "      <th id=\"T_29069_level0_col3\" class=\"col_heading level0 col3\" >Standard Deviation</th>\n",
+       "      <th id=\"T_29069_level0_col4\" class=\"col_heading level0 col4\" >Median</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_6ec93_level0_row0\" class=\"row_heading level0 row0\" >sepal length (cm)</th>\n",
-       "      <td id=\"T_6ec93_row0_col0\" class=\"data row0 col0\" >5.843333</td>\n",
-       "      <td id=\"T_6ec93_row0_col1\" class=\"data row0 col1\" >4.300000</td>\n",
-       "      <td id=\"T_6ec93_row0_col2\" class=\"data row0 col2\" >7.900000</td>\n",
-       "      <td id=\"T_6ec93_row0_col3\" class=\"data row0 col3\" >0.828066</td>\n",
-       "      <td id=\"T_6ec93_row0_col4\" class=\"data row0 col4\" >5.800000</td>\n",
+       "      <th id=\"T_29069_level0_row0\" class=\"row_heading level0 row0\" >sepal length (cm)</th>\n",
+       "      <td id=\"T_29069_row0_col0\" class=\"data row0 col0\" >5.843333</td>\n",
+       "      <td id=\"T_29069_row0_col1\" class=\"data row0 col1\" >4.300000</td>\n",
+       "      <td id=\"T_29069_row0_col2\" class=\"data row0 col2\" >7.900000</td>\n",
+       "      <td id=\"T_29069_row0_col3\" class=\"data row0 col3\" >0.828066</td>\n",
+       "      <td id=\"T_29069_row0_col4\" class=\"data row0 col4\" >5.800000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6ec93_level0_row1\" class=\"row_heading level0 row1\" >sepal width (cm)</th>\n",
-       "      <td id=\"T_6ec93_row1_col0\" class=\"data row1 col0\" >3.057333</td>\n",
-       "      <td id=\"T_6ec93_row1_col1\" class=\"data row1 col1\" >2.000000</td>\n",
-       "      <td id=\"T_6ec93_row1_col2\" class=\"data row1 col2\" >4.400000</td>\n",
-       "      <td id=\"T_6ec93_row1_col3\" class=\"data row1 col3\" >0.435866</td>\n",
-       "      <td id=\"T_6ec93_row1_col4\" class=\"data row1 col4\" >3.000000</td>\n",
+       "      <th id=\"T_29069_level0_row1\" class=\"row_heading level0 row1\" >sepal width (cm)</th>\n",
+       "      <td id=\"T_29069_row1_col0\" class=\"data row1 col0\" >3.057333</td>\n",
+       "      <td id=\"T_29069_row1_col1\" class=\"data row1 col1\" >2.000000</td>\n",
+       "      <td id=\"T_29069_row1_col2\" class=\"data row1 col2\" >4.400000</td>\n",
+       "      <td id=\"T_29069_row1_col3\" class=\"data row1 col3\" >0.435866</td>\n",
+       "      <td id=\"T_29069_row1_col4\" class=\"data row1 col4\" >3.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6ec93_level0_row2\" class=\"row_heading level0 row2\" >petal length (cm)</th>\n",
-       "      <td id=\"T_6ec93_row2_col0\" class=\"data row2 col0\" >3.758000</td>\n",
-       "      <td id=\"T_6ec93_row2_col1\" class=\"data row2 col1\" >1.000000</td>\n",
-       "      <td id=\"T_6ec93_row2_col2\" class=\"data row2 col2\" >6.900000</td>\n",
-       "      <td id=\"T_6ec93_row2_col3\" class=\"data row2 col3\" >1.765298</td>\n",
-       "      <td id=\"T_6ec93_row2_col4\" class=\"data row2 col4\" >4.350000</td>\n",
+       "      <th id=\"T_29069_level0_row2\" class=\"row_heading level0 row2\" >petal length (cm)</th>\n",
+       "      <td id=\"T_29069_row2_col0\" class=\"data row2 col0\" >3.758000</td>\n",
+       "      <td id=\"T_29069_row2_col1\" class=\"data row2 col1\" >1.000000</td>\n",
+       "      <td id=\"T_29069_row2_col2\" class=\"data row2 col2\" >6.900000</td>\n",
+       "      <td id=\"T_29069_row2_col3\" class=\"data row2 col3\" >1.765298</td>\n",
+       "      <td id=\"T_29069_row2_col4\" class=\"data row2 col4\" >4.350000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6ec93_level0_row3\" class=\"row_heading level0 row3\" >petal width (cm)</th>\n",
-       "      <td id=\"T_6ec93_row3_col0\" class=\"data row3 col0\" >1.199333</td>\n",
-       "      <td id=\"T_6ec93_row3_col1\" class=\"data row3 col1\" >0.100000</td>\n",
-       "      <td id=\"T_6ec93_row3_col2\" class=\"data row3 col2\" >2.500000</td>\n",
-       "      <td id=\"T_6ec93_row3_col3\" class=\"data row3 col3\" >0.762238</td>\n",
-       "      <td id=\"T_6ec93_row3_col4\" class=\"data row3 col4\" >1.300000</td>\n",
+       "      <th id=\"T_29069_level0_row3\" class=\"row_heading level0 row3\" >petal width (cm)</th>\n",
+       "      <td id=\"T_29069_row3_col0\" class=\"data row3 col0\" >1.199333</td>\n",
+       "      <td id=\"T_29069_row3_col1\" class=\"data row3 col1\" >0.100000</td>\n",
+       "      <td id=\"T_29069_row3_col2\" class=\"data row3 col2\" >2.500000</td>\n",
+       "      <td id=\"T_29069_row3_col3\" class=\"data row3 col3\" >0.762238</td>\n",
+       "      <td id=\"T_29069_row3_col4\" class=\"data row3 col4\" >1.300000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_6ec93_level0_row4\" class=\"row_heading level0 row4\" >target</th>\n",
-       "      <td id=\"T_6ec93_row4_col0\" class=\"data row4 col0\" >1.000000</td>\n",
-       "      <td id=\"T_6ec93_row4_col1\" class=\"data row4 col1\" >0.000000</td>\n",
-       "      <td id=\"T_6ec93_row4_col2\" class=\"data row4 col2\" >2.000000</td>\n",
-       "      <td id=\"T_6ec93_row4_col3\" class=\"data row4 col3\" >0.819232</td>\n",
-       "      <td id=\"T_6ec93_row4_col4\" class=\"data row4 col4\" >1.000000</td>\n",
+       "      <th id=\"T_29069_level0_row4\" class=\"row_heading level0 row4\" >target</th>\n",
+       "      <td id=\"T_29069_row4_col0\" class=\"data row4 col0\" >1.000000</td>\n",
+       "      <td id=\"T_29069_row4_col1\" class=\"data row4 col1\" >0.000000</td>\n",
+       "      <td id=\"T_29069_row4_col2\" class=\"data row4 col2\" >2.000000</td>\n",
+       "      <td id=\"T_29069_row4_col3\" class=\"data row4 col3\" >0.819232</td>\n",
+       "      <td id=\"T_29069_row4_col4\" class=\"data row4 col4\" >1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
@@ -435,7 +435,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 4
+   "execution_count": 18
   },
   {
    "metadata": {},
@@ -451,8 +451,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-05T22:49:29.327171Z",
-     "start_time": "2025-04-05T22:49:29.033019Z"
+     "end_time": "2025-04-05T23:20:52.803185Z",
+     "start_time": "2025-04-05T23:20:52.627083Z"
     }
    },
    "cell_type": "code",
@@ -489,7 +489,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 5
+   "execution_count": 19
   },
   {
    "metadata": {},
@@ -504,8 +504,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-05T22:49:29.404686Z",
-     "start_time": "2025-04-05T22:49:29.338439Z"
+     "end_time": "2025-04-05T23:20:52.869591Z",
+     "start_time": "2025-04-05T23:20:52.812419Z"
     }
    },
    "cell_type": "code",
@@ -545,7 +545,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 6
+   "execution_count": 20
   },
   {
    "metadata": {},
@@ -553,17 +553,21 @@
    "source": [
     "## Task 6: Analyze Relationship\n",
     "Using `numpy.polyfit` to add a regression line to the scatter plot from Task 5.  \n",
+    "\n",
+    "### Results and Analysis\n",
     "The plot shows a linear regression line (y = -0.06x + 3.42) fitted to the relationship between Sepal Length and Sepal Width for three Iris species.  \n",
-    "However the regression line is not meaningful for the dataset as the data points are not linearly correlated.\n",
+    "- The line is fitted to the data points, but the $R^2$ is very small (0.0138) , indicating a weak relationship.\n",
+    "\n",
     "## Resources\n",
-    "[numpy.polyfit documentation](https://numpy.org/doc/stable/reference/generated/numpy.polyfit.html)"
+    "[Numpy polyfit documentation](https://numpy.org/doc/stable/reference/generated/numpy.polyfit.html)  \n",
+    "[Coefficient of determination](https://en.wikipedia.org/wiki/Coefficient_of_determination)"
    ]
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-05T22:49:29.471407Z",
-     "start_time": "2025-04-05T22:49:29.414089Z"
+     "end_time": "2025-04-05T23:21:04.286872Z",
+     "start_time": "2025-04-05T23:21:04.216715Z"
     }
    },
    "cell_type": "code",
@@ -590,9 +594,23 @@
     "sepal_length= iris_dataframe['sepal length (cm)']\n",
     "sepal_width = iris_dataframe['sepal width (cm)']\n",
     "m, c = np.polyfit(sepal_length, sepal_width, 1)\n",
-    "plt.plot(sepal_length, m * sepal_length + c, color='black')\n",
+    "f =  m * sepal_length + c\n",
+    "plt.plot(sepal_length, f , color='black')\n",
     "plt.title(f'Regression line for sepal length and width: y = {m:.2f}x + {c:.2f}')\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "# Calculating correlation by hand\n",
+    "# Sum of squares of residuals\n",
+    "ss_res = np.sum((sepal_width - f) ** 2)\n",
+    "# Mean of sepal width\n",
+    "y_bar = np.mean(sepal_width)\n",
+    "# Total sum of squares.\n",
+    "ss_tot = np.sum((sepal_width - y_bar) ** 2)\n",
+    "\n",
+    "# R^2 value\n",
+    "r_2 = 1 - (ss_res / ss_tot)\n",
+    "\n",
+    "print(f\"R^2 value: {r_2:.4f}\")\n"
    ],
    "outputs": [
     {
@@ -604,9 +622,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R^2 value: 0.0138\n"
+     ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 24
   },
   {
    "metadata": {},
@@ -624,8 +649,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-05T22:49:29.549603Z",
-     "start_time": "2025-04-05T22:49:29.507822Z"
+     "end_time": "2025-04-05T23:20:53.030632Z",
+     "start_time": "2025-04-05T23:20:52.958317Z"
     }
    },
    "cell_type": "code",
@@ -659,7 +684,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 8
+   "execution_count": 22
   },
   {
    "metadata": {},
@@ -684,8 +709,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-05T22:49:29.626036Z",
-     "start_time": "2025-04-05T22:49:29.560215Z"
+     "end_time": "2025-04-05T23:20:53.105917Z",
+     "start_time": "2025-04-05T23:20:53.040639Z"
     }
    },
    "cell_type": "code",
@@ -726,7 +751,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 9
+   "execution_count": 23
   }
  ],
  "metadata": {
