Adding summary and conclusion with key insights

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -15,8 +15,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-06T00:11:25.515590Z",
-     "start_time": "2025-04-06T00:11:25.444879Z"
+     "end_time": "2025-04-13T19:12:19.980036Z",
+     "start_time": "2025-04-13T19:12:19.977390Z"
     }
    },
    "cell_type": "code",
@@ -28,7 +28,7 @@
     "import seaborn as sns"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 74
   },
   {
    "metadata": {},
@@ -51,8 +51,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-06T00:11:25.539904Z",
-     "start_time": "2025-04-06T00:11:25.537831Z"
+     "end_time": "2025-04-13T19:12:19.998389Z",
+     "start_time": "2025-04-13T19:12:19.995268Z"
     }
    },
    "cell_type": "code",
@@ -61,7 +61,7 @@
     "iris_dataset = datasets.load_iris()"
    ],
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 75
   },
   {
    "metadata": {},
@@ -84,8 +84,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-06T00:11:25.552291Z",
-     "start_time": "2025-04-06T00:11:25.544420Z"
+     "end_time": "2025-04-13T19:12:20.015848Z",
+     "start_time": "2025-04-13T19:12:20.008852Z"
     }
    },
    "cell_type": "code",
@@ -322,7 +322,7 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 76
   },
   {
    "metadata": {},
@@ -339,8 +339,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-06T00:11:25.584765Z",
-     "start_time": "2025-04-06T00:11:25.560623Z"
+     "end_time": "2025-04-13T19:12:20.031617Z",
+     "start_time": "2025-04-13T19:12:20.027293Z"
     }
    },
    "cell_type": "code",
@@ -366,68 +366,68 @@
     {
      "data": {
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x16bda0140>"
+       "<pandas.io.formats.style.Styler at 0x162252a50>"
       ],
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_02dd1 th {\n",
+       "#T_eedf9 th {\n",
        "  text-align: left;\n",
        "}\n",
-       "#T_02dd1 td {\n",
+       "#T_eedf9 td {\n",
        "  text-align: left;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_02dd1\">\n",
+       "<table id=\"T_eedf9\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_02dd1_level0_col0\" class=\"col_heading level0 col0\" >Mean</th>\n",
-       "      <th id=\"T_02dd1_level0_col1\" class=\"col_heading level0 col1\" >Minimum</th>\n",
-       "      <th id=\"T_02dd1_level0_col2\" class=\"col_heading level0 col2\" >Maximum</th>\n",
-       "      <th id=\"T_02dd1_level0_col3\" class=\"col_heading level0 col3\" >Standard Deviation</th>\n",
-       "      <th id=\"T_02dd1_level0_col4\" class=\"col_heading level0 col4\" >Median</th>\n",
+       "      <th id=\"T_eedf9_level0_col0\" class=\"col_heading level0 col0\" >Mean</th>\n",
+       "      <th id=\"T_eedf9_level0_col1\" class=\"col_heading level0 col1\" >Minimum</th>\n",
+       "      <th id=\"T_eedf9_level0_col2\" class=\"col_heading level0 col2\" >Maximum</th>\n",
+       "      <th id=\"T_eedf9_level0_col3\" class=\"col_heading level0 col3\" >Standard Deviation</th>\n",
+       "      <th id=\"T_eedf9_level0_col4\" class=\"col_heading level0 col4\" >Median</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_02dd1_level0_row0\" class=\"row_heading level0 row0\" >sepal length (cm)</th>\n",
-       "      <td id=\"T_02dd1_row0_col0\" class=\"data row0 col0\" >5.843333</td>\n",
-       "      <td id=\"T_02dd1_row0_col1\" class=\"data row0 col1\" >4.300000</td>\n",
-       "      <td id=\"T_02dd1_row0_col2\" class=\"data row0 col2\" >7.900000</td>\n",
-       "      <td id=\"T_02dd1_row0_col3\" class=\"data row0 col3\" >0.828066</td>\n",
-       "      <td id=\"T_02dd1_row0_col4\" class=\"data row0 col4\" >5.800000</td>\n",
+       "      <th id=\"T_eedf9_level0_row0\" class=\"row_heading level0 row0\" >sepal length (cm)</th>\n",
+       "      <td id=\"T_eedf9_row0_col0\" class=\"data row0 col0\" >5.843333</td>\n",
+       "      <td id=\"T_eedf9_row0_col1\" class=\"data row0 col1\" >4.300000</td>\n",
+       "      <td id=\"T_eedf9_row0_col2\" class=\"data row0 col2\" >7.900000</td>\n",
+       "      <td id=\"T_eedf9_row0_col3\" class=\"data row0 col3\" >0.828066</td>\n",
+       "      <td id=\"T_eedf9_row0_col4\" class=\"data row0 col4\" >5.800000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_02dd1_level0_row1\" class=\"row_heading level0 row1\" >sepal width (cm)</th>\n",
-       "      <td id=\"T_02dd1_row1_col0\" class=\"data row1 col0\" >3.057333</td>\n",
-       "      <td id=\"T_02dd1_row1_col1\" class=\"data row1 col1\" >2.000000</td>\n",
-       "      <td id=\"T_02dd1_row1_col2\" class=\"data row1 col2\" >4.400000</td>\n",
-       "      <td id=\"T_02dd1_row1_col3\" class=\"data row1 col3\" >0.435866</td>\n",
-       "      <td id=\"T_02dd1_row1_col4\" class=\"data row1 col4\" >3.000000</td>\n",
+       "      <th id=\"T_eedf9_level0_row1\" class=\"row_heading level0 row1\" >sepal width (cm)</th>\n",
+       "      <td id=\"T_eedf9_row1_col0\" class=\"data row1 col0\" >3.057333</td>\n",
+       "      <td id=\"T_eedf9_row1_col1\" class=\"data row1 col1\" >2.000000</td>\n",
+       "      <td id=\"T_eedf9_row1_col2\" class=\"data row1 col2\" >4.400000</td>\n",
+       "      <td id=\"T_eedf9_row1_col3\" class=\"data row1 col3\" >0.435866</td>\n",
+       "      <td id=\"T_eedf9_row1_col4\" class=\"data row1 col4\" >3.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_02dd1_level0_row2\" class=\"row_heading level0 row2\" >petal length (cm)</th>\n",
-       "      <td id=\"T_02dd1_row2_col0\" class=\"data row2 col0\" >3.758000</td>\n",
-       "      <td id=\"T_02dd1_row2_col1\" class=\"data row2 col1\" >1.000000</td>\n",
-       "      <td id=\"T_02dd1_row2_col2\" class=\"data row2 col2\" >6.900000</td>\n",
-       "      <td id=\"T_02dd1_row2_col3\" class=\"data row2 col3\" >1.765298</td>\n",
-       "      <td id=\"T_02dd1_row2_col4\" class=\"data row2 col4\" >4.350000</td>\n",
+       "      <th id=\"T_eedf9_level0_row2\" class=\"row_heading level0 row2\" >petal length (cm)</th>\n",
+       "      <td id=\"T_eedf9_row2_col0\" class=\"data row2 col0\" >3.758000</td>\n",
+       "      <td id=\"T_eedf9_row2_col1\" class=\"data row2 col1\" >1.000000</td>\n",
+       "      <td id=\"T_eedf9_row2_col2\" class=\"data row2 col2\" >6.900000</td>\n",
+       "      <td id=\"T_eedf9_row2_col3\" class=\"data row2 col3\" >1.765298</td>\n",
+       "      <td id=\"T_eedf9_row2_col4\" class=\"data row2 col4\" >4.350000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_02dd1_level0_row3\" class=\"row_heading level0 row3\" >petal width (cm)</th>\n",
-       "      <td id=\"T_02dd1_row3_col0\" class=\"data row3 col0\" >1.199333</td>\n",
-       "      <td id=\"T_02dd1_row3_col1\" class=\"data row3 col1\" >0.100000</td>\n",
-       "      <td id=\"T_02dd1_row3_col2\" class=\"data row3 col2\" >2.500000</td>\n",
-       "      <td id=\"T_02dd1_row3_col3\" class=\"data row3 col3\" >0.762238</td>\n",
-       "      <td id=\"T_02dd1_row3_col4\" class=\"data row3 col4\" >1.300000</td>\n",
+       "      <th id=\"T_eedf9_level0_row3\" class=\"row_heading level0 row3\" >petal width (cm)</th>\n",
+       "      <td id=\"T_eedf9_row3_col0\" class=\"data row3 col0\" >1.199333</td>\n",
+       "      <td id=\"T_eedf9_row3_col1\" class=\"data row3 col1\" >0.100000</td>\n",
+       "      <td id=\"T_eedf9_row3_col2\" class=\"data row3 col2\" >2.500000</td>\n",
+       "      <td id=\"T_eedf9_row3_col3\" class=\"data row3 col3\" >0.762238</td>\n",
+       "      <td id=\"T_eedf9_row3_col4\" class=\"data row3 col4\" >1.300000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_02dd1_level0_row4\" class=\"row_heading level0 row4\" >target</th>\n",
-       "      <td id=\"T_02dd1_row4_col0\" class=\"data row4 col0\" >1.000000</td>\n",
-       "      <td id=\"T_02dd1_row4_col1\" class=\"data row4 col1\" >0.000000</td>\n",
-       "      <td id=\"T_02dd1_row4_col2\" class=\"data row4 col2\" >2.000000</td>\n",
-       "      <td id=\"T_02dd1_row4_col3\" class=\"data row4 col3\" >0.819232</td>\n",
-       "      <td id=\"T_02dd1_row4_col4\" class=\"data row4 col4\" >1.000000</td>\n",
+       "      <th id=\"T_eedf9_level0_row4\" class=\"row_heading level0 row4\" >target</th>\n",
+       "      <td id=\"T_eedf9_row4_col0\" class=\"data row4 col0\" >1.000000</td>\n",
+       "      <td id=\"T_eedf9_row4_col1\" class=\"data row4 col1\" >0.000000</td>\n",
+       "      <td id=\"T_eedf9_row4_col2\" class=\"data row4 col2\" >2.000000</td>\n",
+       "      <td id=\"T_eedf9_row4_col3\" class=\"data row4 col3\" >0.819232</td>\n",
+       "      <td id=\"T_eedf9_row4_col4\" class=\"data row4 col4\" >1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
@@ -437,7 +437,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 4
+   "execution_count": 77
   },
   {
    "metadata": {},
@@ -453,8 +453,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-06T00:11:26.018833Z",
-     "start_time": "2025-04-06T00:11:25.636721Z"
+     "end_time": "2025-04-13T19:12:20.308161Z",
+     "start_time": "2025-04-13T19:12:20.079012Z"
     }
    },
    "cell_type": "code",
@@ -491,7 +491,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 5
+   "execution_count": 78
   },
   {
    "metadata": {},
@@ -506,8 +506,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-06T00:11:26.090395Z",
-     "start_time": "2025-04-06T00:11:26.025231Z"
+     "end_time": "2025-04-13T19:12:20.389480Z",
+     "start_time": "2025-04-13T19:12:20.320468Z"
     }
    },
    "cell_type": "code",
@@ -547,7 +547,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 6
+   "execution_count": 79
   },
   {
    "metadata": {},
@@ -569,8 +569,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-06T00:11:26.164695Z",
-     "start_time": "2025-04-06T00:11:26.097691Z"
+     "end_time": "2025-04-13T19:12:20.468709Z",
+     "start_time": "2025-04-13T19:12:20.398751Z"
     }
    },
    "cell_type": "code",
@@ -614,7 +614,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 7
+   "execution_count": 80
   },
   {
    "metadata": {},
@@ -632,8 +632,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-06T00:11:26.211983Z",
-     "start_time": "2025-04-06T00:11:26.172209Z"
+     "end_time": "2025-04-13T19:12:20.519493Z",
+     "start_time": "2025-04-13T19:12:20.478808Z"
     }
    },
    "cell_type": "code",
@@ -667,7 +667,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 8
+   "execution_count": 81
   },
   {
    "metadata": {},
@@ -692,8 +692,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-06T00:11:26.287149Z",
-     "start_time": "2025-04-06T00:11:26.220134Z"
+     "end_time": "2025-04-13T19:12:20.600488Z",
+     "start_time": "2025-04-13T19:12:20.528043Z"
     }
    },
    "cell_type": "code",
@@ -734,7 +734,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 9
+   "execution_count": 82
   },
   {
    "metadata": {},
@@ -753,8 +753,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-06T00:11:26.361938Z",
-     "start_time": "2025-04-06T00:11:26.295648Z"
+     "end_time": "2025-04-13T19:12:20.678365Z",
+     "start_time": "2025-04-13T19:12:20.611311Z"
     }
    },
    "cell_type": "code",
@@ -810,7 +810,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 10
+   "execution_count": 83
   },
   {
    "metadata": {},
@@ -832,8 +832,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-06T00:11:27.477480Z",
-     "start_time": "2025-04-06T00:11:26.370359Z"
+     "end_time": "2025-04-13T19:12:21.716723Z",
+     "start_time": "2025-04-13T19:12:20.688284Z"
     }
    },
    "cell_type": "code",
@@ -865,7 +865,50 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 11
+   "execution_count": 84
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## Summary and Conclusion\n",
+    "In this notebook, we explored the classic Iris dataset using Python's data science libraries.  \n",
+    "We performed the following tasks:  \n",
+    "1. Sourced the dataset: Loaded the Iris dataset using sklearn.datasets.\n",
+    "2. Explored the data structure: Examined the shape, first and last rows, feature names, and target class names.\n",
+    "3. Summarized the data: Calculated key statistical metrics (mean, min, max, standard deviation, and median) for each feature.\n",
+    "4. Visualized features: Created histograms for each feature to understand their distributions.\n",
+    "5. Investigated relationships: Plotted scatter plots to visualize the relationship between Sepal Length and Sepal Width, color-coded by species.\n",
+    "6. Analyzed relationships: Added a regression line to the scatter plot and calculated the $R^2$ value to assess the goodness of fit.\n",
+    "7. Analyzed class distributions: Created box plots to visualize the distribution of petal lengths for each species.\n",
+    "8. Computed correlations: Calculated the correlation coefficients between features and visualized them using a heatmap.\n",
+    "9. Fitted a simple linear regression: Fitted a regression line to the scatter plot and calculated the $R^2$ value.\n",
+    "10. Visualized pairwise relationships: Used Seaborn's pairplot to visualize pairwise relationships and distributions of features, color-coded by species.  \n",
+    "\n",
+    "### Key Findings\n",
+    "- Feature Distributions: Petal features are more informative for classification than sepal features.\n",
+    "- Species Separation: Setosa is easily separable from the other two species, while Versicolor and Virginica show significant overlap.\n",
+    "- Correlation Analysis: Strong positive correlation between petal length and width, while sepal width has weak correlations with other features.\n",
+    "- Regression Analysis: The regression line fitted to Sepal Length vs. Sepal Width shows a weak relationship, as indicated by the low $R^2$ value.\n",
+    "- Pairplot Analysis: The pairplot confirms the findings from the scatter plots and box plots, highlighting the separability of Setosa and the overlap between Versicolor and Virginica.\n",
+    "- Feature Importance: Petal length and width are the most important features for distinguishing between species, while sepal width is the least useful.\n",
+    "\n",
+    "### Future Work\n",
+    "Advanced Classification: Apply machine learning algorithms (e.g. Random Forest) to classify the species based on the features.\n",
+    "\n",
+    "## List of resources\n",
+    "1. [Scikit-learn datasets documentation](https://scikit-learn.org/stable/modules/generated/sklearn.datasets.load_iris.html)  \n",
+    "2. [Pandas dataframe documentation](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html)  \n",
+    "3. [Pandas dataframes stats](https://pandas.pydata.org/docs/reference/frame.html#computations-descriptive-stats)  \n",
+    "4. [Numpy polyfit documentation](https://numpy.org/doc/stable/reference/generated/numpy.polyfit.html)  \n",
+    "5. [Pandas DataFrame groupby](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.groupby.html)  \n",
+    "6. [Pandas DataFrame boxplot](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.boxplot.html)  \n",
+    "7. [Matplotlib heatmap documentation](https://matplotlib.org/stable/api/_as_gen/matplotlib.axes.Axes.imshow.html)  \n",
+    "8. [Pandas DataFrame corr](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.corr.html)  \n",
+    "9. [Pandas DataFrame drop](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.drop.html)  \n",
+    "10. [Coefficient of determination](https://en.wikipedia.org/wiki/Coefficient_of_determination)  \n",
+    "11. [Seaborn pairplot documentation](https://seaborn.pydata.org/generated/seaborn.pairplot.html)  \n"
+   ]
   }
  ],
  "metadata": {
